# analyze-worker

./: .env.example  .gitignore  Dockerfile  main.py  pyproject.toml  requirements.txt
config/: s3.py  settings.py
workers/: analyze.py
